change background color of Reservar button in the nav

--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ ul.listOne li {
 
 /*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones, Recorridos, Contacto, Reservar */
 .backgroundColorTwo {
-    background-color: gray;
+    background-color: orange;
 }
 
 /**********>>>   MAIN   <<<**********/
