--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,23 @@ span
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
+html {
+    font-size: 16px;
+}
+
+h1 { 
+    font-size: 1.8rem;
+}
+
+h2 {
+    font-size: 1.6rem;
+}
+
+h3 {
+    font-size: 1.4rem;
+}
+
+
 /*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones, Recorridos, Contacto, Reservar */
 .fontColorOne,
 a.fontColorOne {
@@ -50,6 +67,10 @@ tr.fontColorTwo {
 /*Utilizado en siguientes paginas: Condiciones, Recorridos */
 .fontColorThree {
     color: #f5c60d;
+}
+
+.spaceOne {
+    padding-top: 10px;
 }
 
 /**********>>>>>   HEADER   <<<<<**********/
@@ -135,7 +156,7 @@ main {
     text-align: center;
     align-items: center;
     border: 2px solid orange;
-    width: 20%
+    width: 30%
 }
 
 /*Utilizado en siguientes paginas: Recorridos */
@@ -159,7 +180,16 @@ main {
     flex-direction: column;
     border: 2px solid orange;
     align-items: center;
-     
+}
+
+.containerEight {
+    display: flex;
+    flex-direction: column;
+    image-orientation: center;
+    text-align: center;
+    align-items: center;
+    border: 2px solid orange;
+    width: 20%
 }
 
 /*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones y FAQ, Recorridos, Contacto, Reservar */
@@ -214,6 +244,10 @@ button {
         grid-template-columns: auto;
         justify-content: space-around;
     }
+
+    .containerEight {
+        width: 40%;
+    }
 }
 
 /**********>>>>>   MOBILE   <<<<<**********/
@@ -236,5 +270,9 @@ button {
     display: grid;
     grid-template-columns: auto;
     justify-content: space-around;
+}
+
+.containerEight {
+    width: 100%;
 }
 }
