--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,9 @@
 .imageOne {
     display: flex;
     justify-content: center;
-    border: 4px solid blue;
     max-width: 100%;
-    height: auto
+    height: auto;
+    /*    border: 4px solid blue;*/
 }
 
 .imageTwo {
@@ -80,16 +80,25 @@ header {
     display: flex;
     flex-direction: column;
     max-width: 100%;
-    border: 2px solid red;
+    /*border: 2px solid red;*/
 }
 
 /*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones, Recorridos, Contacto, Reservar */
 nav ul {
     display: flex ;
-    border: 2px solid orange;
     width: 80%;
     justify-content: space-evenly;
-    
+    /*border: 2px solid orange;*/
+}
+
+.navbar {
+    border-bottom: 2px solid green;
+    border-top: 20px solid green;
+    background-color: white;
+}
+
+.buttonOne {
+    border-left: 2px solid green;
 }
 
 /*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones, Recorridos, Contacto, Reservar */
@@ -105,12 +114,14 @@ ul.listOne li {
 /*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones, Recorridos, Contacto, Reservar */
 .backgroundColorTwo {
     background-color: orange;
+    font-weight: bold;
+    border-radius: 5px;
 }
 
 /**********>>>   MAIN   <<<**********/
 
 main {
-    margin: 0px 30px;
+    margin: 15px 30px;
     display: flex;
     flex-direction: column;
 }
@@ -127,25 +138,24 @@ main {
 .containerOne {
     border-radius: 10px;
     border-style: solid;
-    border-color: #f5c60d;
+    border-color:  #f5c60d;
     padding: 5px 10px 5px 10px;
     margin-top: 10px;
 }
 
 /*Utilizado en siguientes paginas: Inicio */
 .containerTwo {
-
-    border: 4px solid blue;
     text-align: center;
+    /*  border: 4px solid blue;*/
 }
 
 /*Utilizado en siguientes paginas: Inicio, Como reservar?, */
 .containerThree {
-    border: 10px solid red;
     display: flex;
     flex-wrap: wrap;
     max-width: 100%;
     justify-content: space-around;
+    /*    border: 10px solid red;*/
 }
 
 /*Utilizado en siguientes paginas: Inicio, Como reservar?, */
@@ -155,8 +165,8 @@ main {
     image-orientation: center;
     text-align: center;
     align-items: center;
-    border: 2px solid orange;
-    width: 30%
+    width: 30%;
+    /*    border: 2px solid orange;*/
 }
 
 /*Utilizado en siguientes paginas: Recorridos */
@@ -169,17 +179,17 @@ main {
     display:grid;
     grid-template-columns: auto auto auto auto;
     justify-content: space-around;
-    border: 2px solid red;
     gap: 10px;
     width: 100%;
+    /*border: 2px solid red;*/
 }
 
 /*Utilizado en siguientes paginas: Flota */
 .containerSeven {
     display: flex;
     flex-direction: column;
-    border: 2px solid orange;
     align-items: center;
+    /* border: 2px solid orange;*/
 }
 
 .containerEight {
@@ -188,8 +198,8 @@ main {
     image-orientation: center;
     text-align: center;
     align-items: center;
-    border: 2px solid orange;
-    width: 20%
+    width: 20%;
+    /*    border: 2px solid orange;*/
 }
 
 /*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones y FAQ, Recorridos, Contacto, Reservar */
