--- a/css/style.css
+++ b/css/style.css
@@ -92,13 +92,13 @@ nav ul {
 }
 
 .navbar {
-    border-bottom: 2px solid green;
-    border-top: 20px solid green;
+    border-bottom: 2px solid #097e41;
+    border-top: 20px solid #097e41;
     background-color: white;
 }
 
 .buttonOne {
-    border-left: 2px solid green;
+    border-left: 2px solid #097e41;
 }
 
 /*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones, Recorridos, Contacto, Reservar */
@@ -146,6 +146,7 @@ main {
 /*Utilizado en siguientes paginas: Inicio */
 .containerTwo {
     text-align: center;
+    margin-top: 40px;
     /*  border: 4px solid blue;*/
 }
 
@@ -231,6 +232,9 @@ input {
 button {
     margin-top: 10px;
 }
+
+/**********>>>>>   FOOTER   <<<<<**********/
+
 
 /**********>>>>>   MEDIA QUERIES  <<<<<**********/
 
