Flota.html responsive and details adjusted

--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,10 @@ tr.fontColorTwo {
     padding-top: 10px;
 }
 
+.spaceTwo {
+    margin-top: 50px;
+}
+
 /**********>>>>>   HEADER   <<<<<**********/
 
 /*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones, Recorridos, Contacto, Reservar */
