--- a/css/style.css
+++ b/css/style.css
@@ -204,8 +204,13 @@ main {
     text-align: center;
     align-items: center;
     width: 20%;
-    /*    border: 2px solid orange;*/
-}
+    /*    border: 2px solid orange;*/}
+
+.containerNine {
+        margin: 20px 20px;
+        max-width: 600px;
+    }
+
 
 /*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones y FAQ, Recorridos, Contacto, Reservar */
 hr {
@@ -228,14 +233,15 @@ fieldset {
 }
 
 /*Utilizado en siguientes paginas: Contacto, Reservar*/
-input {
-    max-width: 500px;
+.widthOne {
+    width: 100%;
 }
 
 /*Utilizado en siguientes paginas: Contacto, Reservar*/
 button {
     margin-top: 10px;
 }
+
 
 /**********>>>>>   FOOTER   <<<<<**********/
 
