--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 
 /********** >>>>> IMAGES <<<<< **********/
 
+/*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones, Recorridos, Contacto, Reservar */
 .imageOne {
     display: flex;
     justify-content: center;
@@ -12,9 +13,10 @@
     /*    border: 4px solid blue;*/
 }
 
+/*Utilizado en siguientes paginas: */
 .imageTwo {
     width: 200px;
-    
+
 }
 
 /**********>>>>> TIPOGRAPHY <<<<<**********/
@@ -30,8 +32,7 @@ a,
 fieldset,
 :placeholder-shown,
 input,
-span
- {
+span {
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
@@ -39,7 +40,7 @@ html {
     font-size: 16px;
 }
 
-h1 { 
+h1 {
     font-size: 1.8rem;
 }
 
@@ -89,7 +90,7 @@ header {
 
 /*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones, Recorridos, Contacto, Reservar */
 nav ul {
-    display: flex ;
+    display: flex;
     width: 80%;
     justify-content: space-evenly;
     /*border: 2px solid orange;*/
@@ -142,7 +143,7 @@ main {
 .containerOne {
     border-radius: 10px;
     border-style: solid;
-    border-color:  #f5c60d;
+    border-color: #f5c60d;
     padding: 5px 10px 5px 10px;
     margin-top: 10px;
 }
@@ -181,7 +182,7 @@ main {
 
 /*Utilizado en siguientes paginas: Flota */
 .containerSix {
-    display:grid;
+    display: grid;
     grid-template-columns: auto auto auto auto;
     justify-content: space-around;
     gap: 10px;
@@ -204,12 +205,13 @@ main {
     text-align: center;
     align-items: center;
     width: 20%;
-    /*    border: 2px solid orange;*/}
+    /*    border: 2px solid orange;*/
+}
 
 .containerNine {
-        margin: 20px 20px;
-        max-width: 600px;
-    }
+    margin: 20px 20px;
+    max-width: 600px;
+}
 
 
 /*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones y FAQ, Recorridos, Contacto, Reservar */
@@ -250,17 +252,18 @@ button {
 
 /**********>>>>>   TABLET   <<<<<**********/
 
-@media screen and  (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+
     /*body {
         background-color: orange;
     }*/
     .containerFour {
-        width:40%
+        width: 40%
     }
 
     .containerSix {
-            display:grid;
-            grid-template-columns: auto auto auto;
+        display: grid;
+        grid-template-columns: auto auto auto;
     }
 
     .containerZero {
@@ -290,21 +293,21 @@ button {
     }
 
     .containerSix {
-        display:grid;
+        display: grid;
         grid-template-columns: auto auto;
-}
+    }
 
-.containerZero {
-    display: grid;
-    grid-template-columns: auto;
-    justify-content: space-around;
-}
+    .containerZero {
+        display: grid;
+        grid-template-columns: auto;
+        justify-content: space-around;
+    }
 
-.containerEight {
-    width: 100%;
-}
+    .containerEight {
+        width: 100%;
+    }
 
-.buttonOne {
-    border-left: none;
-}
+    .buttonOne {
+        border-left: none;
+    }
 }
