--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,11 @@
     justify-content: center;
     max-width: 100%;
     height: auto;
-    /*    border: 4px solid blue;*/
 }
 
-/*Utilizado en siguientes paginas: */
+/*Utilizado en siguientes paginas: Flota, */
 .imageTwo {
     width: 200px;
-
 }
 
 /**********>>>>> TIPOGRAPHY <<<<<**********/
@@ -40,18 +38,25 @@ html {
     font-size: 16px;
 }
 
+/*Utilizado en siguientes paginas: Index, Como Reservar?, Flota, Condiciones, Recorridos,   */
 h1 {
     font-size: 1.8rem;
 }
 
+/*Utilizado en siguientes paginas: Condiciones,  */
 h2 {
     font-size: 1.6rem;
 }
 
+/*Utilizado en siguientes paginas: Index, Flota, Condiciones, Recorridos,  */
 h3 {
     font-size: 1.4rem;
 }
 
+/*Utilizado en siguientes paginas: Como Reservar?, Condiciones,  */
+h4 {
+    font-size: 1.2rem;
+}
 
 /*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones, Recorridos, Contacto, Reservar */
 .fontColorOne,
@@ -65,17 +70,9 @@ tr.fontColorTwo {
     color: white;
 }
 
-/*Utilizado en siguientes paginas: Condiciones, Recorridos */
+/*Utilizado en siguientes paginas: Flota, Condiciones, Recorridos */
 .fontColorThree {
     color: #f5c60d;
-}
-
-.spaceOne {
-    padding-top: 10px;
-}
-
-.spaceTwo {
-    margin-top: 50px;
 }
 
 /**********>>>>>   HEADER   <<<<<**********/
@@ -85,7 +82,6 @@ header {
     display: flex;
     flex-direction: column;
     max-width: 100%;
-    /*border: 2px solid red;*/
 }
 
 /*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones, Recorridos, Contacto, Reservar */
@@ -93,15 +89,21 @@ nav ul {
     display: flex;
     width: 80%;
     justify-content: space-evenly;
-    /*border: 2px solid orange;*/
 }
 
+/*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones y FAQ, Recorridos, Contacto, Reservar */
+a {
+    text-decoration: none;
+}
+
+/*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones, Recorridos, Contacto, Reservar  */
 .navbar {
     border-bottom: 2px solid #097e41;
     border-top: 20px solid #097e41;
     background-color: white;
 }
 
+/*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones, Recorridos, Contacto, Reservar  */
 .buttonOne {
     border-left: 2px solid #097e41;
 }
@@ -131,6 +133,20 @@ main {
     flex-direction: column;
 }
 
+/*Utilizado en siguientes paginas: Contacto, Reservar*/
+fieldset {
+    display: flex;
+    flex-direction: column;
+    max-width: 600px;
+    margin-top: 20px;
+    border: 2px solid #f5c60d;
+}
+
+/*Utilizado en siguientes paginas: Contacto, Reservar*/
+button {
+    margin-top: 10px;
+}
+
 /*Utilizado en siguientes paginas: Recorridos */
 .containerZero {
     display: grid;
@@ -152,7 +168,6 @@ main {
 .containerTwo {
     text-align: center;
     margin-top: 40px;
-    /*  border: 4px solid blue;*/
 }
 
 /*Utilizado en siguientes paginas: Inicio, Como reservar?, */
@@ -161,10 +176,10 @@ main {
     flex-wrap: wrap;
     max-width: 100%;
     justify-content: space-around;
-    /*    border: 10px solid red;*/
+    margin-top: 30px;
 }
 
-/*Utilizado en siguientes paginas: Inicio, Como reservar?, */
+/*Utilizado en siguientes paginas: Inicio,  */
 .containerFour {
     display: flex;
     flex-direction: column;
@@ -172,7 +187,6 @@ main {
     text-align: center;
     align-items: center;
     width: 30%;
-    /*    border: 2px solid orange;*/
 }
 
 /*Utilizado en siguientes paginas: Recorridos */
@@ -187,7 +201,6 @@ main {
     justify-content: space-around;
     gap: 10px;
     width: 100%;
-    /*border: 2px solid red;*/
 }
 
 /*Utilizado en siguientes paginas: Flota */
@@ -195,9 +208,9 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* border: 2px solid orange;*/
 }
 
+/*Utilizado en siguientes paginas: Como Reservar?,  */
 .containerEight {
     display: flex;
     flex-direction: column;
@@ -205,33 +218,22 @@ main {
     text-align: center;
     align-items: center;
     width: 20%;
-    /*    border: 2px solid orange;*/
 }
 
+/*Utilizado en siguientes paginas: Contacto, Reservar */
 .containerNine {
     margin: 20px 20px;
     max-width: 600px;
 }
 
-
-/*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones y FAQ, Recorridos, Contacto, Reservar */
-hr {
-    border-width: 2px;
-    border-color: #097e41;
+/*Utilizado en siguientes paginas: Como Reservar?,  */
+.spaceOne {
+    padding-top: 10px;
 }
 
-/*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones y FAQ, Recorridos, Contacto, Reservar */
-a {
-    text-decoration: none;
-}
-
-/*Utilizado en siguientes paginas: Contacto, Reservar*/
-fieldset {
-    display: flex;
-    flex-direction: column;
-    max-width: 600px;
-    margin-top: 20px;
-    border: 2px solid #f5c60d;
+/*Utilizado en siguientes paginas: Flota */
+.spaceTwo {
+    margin-top: 50px;
 }
 
 /*Utilizado en siguientes paginas: Contacto, Reservar*/
@@ -239,14 +241,13 @@ fieldset {
     width: 100%;
 }
 
-/*Utilizado en siguientes paginas: Contacto, Reservar*/
-button {
-    margin-top: 10px;
-}
-
-
 /**********>>>>>   FOOTER   <<<<<**********/
 
+/*Utilizado en siguientes paginas: Inicio, Como Reservar?, Flota, Condiciones y FAQ, Recorridos, Contacto, Reservar */
+hr {
+    border-width: 2px;
+    border-color: #097e41;
+}
 
 /**********>>>>>   MEDIA QUERIES  <<<<<**********/
 
@@ -254,9 +255,6 @@ button {
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
 
-    /*body {
-        background-color: orange;
-    }*/
     .containerFour {
         width: 40%
     }
@@ -284,9 +282,6 @@ button {
 /**********>>>>>   MOBILE   <<<<<**********/
 
 @media screen and (max-width: 767px) {
-    /*body {
-        background-color: red;
-    }*/
 
     .containerFour {
         width: 100%;
