--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -9,11 +9,11 @@ nav ul {
   width: 80%;
   justify-content: space-evenly;
 }
-
+/*
 a {
   text-decoration: none;
 }
-
+*/
 .navbar {
   border-bottom: 2px solid $color-fontColorOne;
   border-top: 20px solid $color-fontColorOne;
