--- a/scss/_images.scss
+++ b/scss/_images.scss
@@ -1,10 +1,118 @@
 .imageOne {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     max-width: 100%;
-    height: auto;
+    height: 500px;
+    background-image: url(../img/iguazu4.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: bottom center;
+    opacity: 0.7 ;
 }
 
 .imageTwo {
     width: 200px;
+}
+
+.imageThree {
+    background-color: orange;
+    width: 250px;
+    height: 250px;
+    margin-left: 70px;
+    opacity: 0.7;
+    background-image: url(../img/logo.jpg);
+    background-size: contain;
+    background-position: top center;
+    border-radius:0px 0px 100px 100px ;
+    
+}
+
+.imageFour {
+    display: flex;
+    justify-content: left;
+    max-width: 100%;
+    height: 500px;
+    background-image: url(../img/iguazu3.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: bottom center;
+    opacity: 0.7 ;
+}
+
+.imageFive {
+    display: flex;
+    justify-content: left;
+    max-width: 100%;
+    height: 500px;
+    background-image: url(../img/iguazu4.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: bottom center;
+    opacity: 0.7 ;
+}
+
+.imageSix {
+    display: flex;
+    justify-content: left;
+    max-width: 100%;
+    height: 500px;
+    background-image: url(../img/iguazu2.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: bottom;
+    opacity: 0.7 ;
+}
+
+.imageSeven {
+    display: flex;
+    justify-content: left;
+    max-width: 100%;
+    height: 500px;
+    background-image: url(../img/iguazu1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    opacity: 0.7 ;
+}
+
+.imageEight {
+    display: flex;
+    justify-content: left;
+    max-width: 100%;
+    height: 500px;
+    background-image: url(../img/sanignacio.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: bottom;
+    opacity: 0.7 ;
+}
+
+.imageNine {
+    display: flex;
+    justify-content: left;
+    max-width: 100%;
+    height: 500px;
+    background-image: url(../img/hito.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: bottom center;
+    opacity: 0.7 ;
+}
+
+.imageEleven {
+    width: 100px;
+    height: 100px;
+    margin: 20px 70px;
+    opacity: 1;
+    background-image: url(../img/logo.jpg);
+    background-size: contain;
+    background-position: top center;
+    border-radius: 100px;
 }
