--- a/scss/_images.scss
+++ b/scss/_images.scss
@@ -1,6 +1,5 @@
 .imageOne {
     display: flex;
-    justify-content: left;
     max-width: 100%;
     height: 500px;
     background-image: url(../img/iguazu4.jpg);
@@ -8,7 +7,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: bottom center;
-    opacity: 0.7 ;
+    filter: brightness(0.9);
 }
 
 .imageTwo {
@@ -20,7 +19,7 @@
     width: 250px;
     height: 250px;
     margin-left: 70px;
-    opacity: 0.7;
+    filter: brightness(0.9);
     background-image: url(../img/logo.jpg);
     background-size: contain;
     background-position: top center;
@@ -38,7 +37,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: bottom center;
-    opacity: 0.7 ;
+    filter: brightness(0.9);
 }
 
 .imageFive {
@@ -51,7 +50,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: bottom center;
-    opacity: 0.7 ;
+    filter: brightness(0.9);
 }
 
 .imageSix {
@@ -64,7 +63,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: bottom;
-    opacity: 0.7 ;
+    filter: brightness(0.9);
 }
 
 .imageSeven {
@@ -77,7 +76,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-    opacity: 0.7 ;
+    filter: brightness(0.9);
 }
 
 .imageEight {
@@ -90,7 +89,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: bottom;
-    opacity: 0.7 ;
+    filter: brightness(0.9);
 }
 
 .imageNine {
@@ -103,7 +102,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: bottom center;
-    opacity: 0.7 ;
+    filter: brightness(0.9);
 }
 
 .imageEleven {
@@ -115,4 +114,10 @@
     background-size: contain;
     background-position: top center;
     border-radius: 100px;
+}
+
+.imageTwelve {
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    height: 50px
 }
