commit last changes

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ a, tr.fontColorTwo {
   color: #f5c60d;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 main {
   margin: 15px 30px;
   display: flex;
@@ -193,7 +197,7 @@ nav ul {
 }
 
 .buttonOne {
-  border-left: 2px solid #097e41;
+  background-color: rgba(144, 238, 144, 0.4);
 }
 
 ul.listOne li {
@@ -205,7 +209,6 @@ ul.listOne li {
 }
 
 .backgroundColorTwo {
-  background-color: orange;
   font-weight: bold;
   border-radius: 5px;
 }
