--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -1,8 +1,33 @@
 /* TABLET */
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .containerFour {
-      width: 40%;
+
+
+
+
+@media screen and (min-width: 768px) and (max-width: 1400px) {
+
+  .navbar-collapse {
+    display: none;
+  }
+  .navbar-toggler {
+    display: block;
+  }
+  .navbar-toggler-icon {
+    display: inline-block;
+  }
+  .navbar-toggler[aria-expanded="true"] {
+    display: none;
+  }
+  .navbar-collapse.show {
+    display: block;
+  }
+  .containerThree {
+    margin-top: 0px;
+  }
+  
+  .containerFour {
+      width: 40%; 
+      margin-bottom: 20px;
     }
   
     .containerSix {
@@ -23,13 +48,31 @@
     .buttonOne {
       border-left: none;
     }
+
+    section div div p {
+      font-size: 0.8rem;
+    }
+
+    main section h1 {
+      margin-bottom: 30px;
+    }
   }
 
   /* MOBILE */
 
   @media screen and (max-width: 767px) {
+    
+
+    main section h1 {
+      margin-bottom: 30px;
+    }
+    .containerThree {
+      margin-top: 0px;
+    }
+    
     .containerFour {
       width: 100%;
+      margin-bottom: 20px;
     }
   
     .containerSix {
