--- a/scss/_containers.scss
+++ b/scss/_containers.scss
@@ -79,3 +79,29 @@
 .containerEleven {
     margin: 0px 10px;
 }
+
+.containerTwelve {
+    display:flex;
+    
+}
+
+.containerThirdteen {
+    display: flex;
+    width: 80%;
+    justify-content: flex-end;
+}
+
+.facebook {
+    display: inline-block;
+    margin: 65px 20px;
+}
+
+.instagram {
+    display: inline-block;
+    margin: 65px 20px;
+}
+
+.whatsapp {
+    display: inline-block;
+    margin: 65px 20px;
+}
