--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,9 @@
 $color-fontColorOne: #097e41; 
 $color-fontColorTwo: white;
 $color-fontColorThree: #f5c60d;
+$size-fontSizeOne:1.8rem;
+$size-fontSizeTwo:1.6rem;
+$size-fontSizeThree:1.4rem;
+$size-fontSizeFour:1.2rem;
+$size-fontSizeFive:1rem;
+$size-fontSizeSix:0.8rem;
