--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -17,20 +17,28 @@ html {
   font-size: 16px;
 }
 
-h1 {
-  font-size: 1.8rem;
+.fontSizeOne {
+  font-size: $size-fontSizeOne;
 }
 
-h2 {
+.fontSizeTwo {
   font-size: 1.6rem;
 }
 
-h3 {
+.fontSizeThree {
   font-size: 1.4rem;
 }
 
-h4 {
+.fontSizeFour {
   font-size: 1.2rem;
+}
+
+.fontSizeFive {
+  font-size: 1rem;
+}
+
+.fontSizeSix {
+  font-size: 0.8rem;
 }
 
 .fontColorOne,
