--- a/css/style.css
+++ b/css/style.css
@@ -354,8 +354,20 @@ hr {
 
 .containerThirdteen {
   display: flex;
-  width: 80%;
+  width: 15%;
   justify-content: flex-end;
+}
+
+.containerFourteen {
+  display: block;
+}
+
+.containerFifthteen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 40%;
+  margin: auto;
 }
 
 .facebook {
