--- a/scss/_containers.scss
+++ b/scss/_containers.scss
@@ -87,8 +87,20 @@
 
 .containerThirdteen {
     display: flex;
-    width: 80%;
+    width: 15%;
     justify-content: flex-end;
+}
+
+.containerFourteen{
+    display: block;
+}
+
+.containerFifthteen {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 40%;
+    margin: auto;
 }
 
 .facebook {
