--- a/scss/_containers.scss
+++ b/scss/_containers.scss
@@ -46,7 +46,6 @@
 .containerSix {
     display: grid;
     grid-template-columns: auto auto auto auto;
-    justify-content: space-around;
     gap: 10px;
     width: 100%;
 }
@@ -55,6 +54,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 390.5px;
 }
 
 
