centered the form in contacto.html and reservar.html

--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,10 @@ ul.listOne li {
   border-radius: 5px;
 }
 
+form {
+  margin: auto;
+}
+
 fieldset {
   display: flex;
   flex-direction: column;
