--- a/scss/_containers.scss
+++ b/scss/_containers.scss
@@ -106,14 +106,17 @@
 .facebook {
     display: inline-block;
     margin: 65px 20px;
+    width: 10%;
 }
 
 .instagram {
     display: inline-block;
     margin: 65px 20px;
+    width: 10%;
 }
 
 .whatsapp {
     display: inline-block;
     margin: 65px 20px;
+    width: 10%;
 }
