--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -24,7 +24,6 @@
     .containerEight {
       width: 40%;
     }
-  
     .buttonOne {
       border-left: none;
     }
@@ -69,6 +68,15 @@
     .containerEight {
       width: 100%;
     }
+
+    .containerFourteen {
+      display: none;
+    }
+
+    .containerThirdteen {
+      margin: 0px 30px 0px 0px; 
+    }
+
   
     .buttonOne {
       border-left: none;
