adjusted the mediaqueries for flota.html

--- a/css/style.css
+++ b/css/style.css
@@ -407,10 +407,6 @@ hr {
     width: 40%;
     margin-bottom: 20px;
   }
-  .containerSix {
-    display: grid;
-    grid-template-columns: auto auto auto;
-  }
   .containerZero {
     display: grid;
     grid-template-columns: auto;
@@ -441,10 +437,6 @@ hr {
     width: 100%;
     margin-bottom: 20px;
   }
-  .containerSix {
-    display: grid;
-    grid-template-columns: auto auto;
-  }
   .containerZero {
     display: grid;
     grid-template-columns: auto;
@@ -461,6 +453,35 @@ hr {
   }
   .buttonOne {
     border-left: none;
+  }
+}
+@media screen and (min-width: 1150px) and (max-width: 1560px) {
+  .containerSix {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 10px;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 800px) and (max-width: 1150px) {
+  .containerSix {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 10px;
+    width: 100%;
+    margin: auto;
+  }
+}
+@media screen and (max-width: 800px) {
+  .containerSix {
+    display: grid;
+    grid-template-columns: auto;
+    gap: 10px;
+    width: 100%;
+    margin: auto;
+  }
+  .containerSeven {
+    margin: auto;
   }
 }
 
